[package]
edition = "2021"
name = "quick_runtime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
quickjspp = {version = "0.2", path = "../../../quickjspp-rs"}

hai_pal = {version = "0.1", path = "../platform"}

[dev-dependencies]
env_logger = {version = "0.9"}
tokio = {version = "1", features = ["full"]}
