[package]
description = "Javascript runtime for Moyu based on QuickJS."
edition = "2021"
license = "MPL-2.0"
name = "moyu_runtime"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[dependencies]
quickjs-rusty = "0.9.1"

anyhow = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true, features = ["time", "sync"]}

moyu_pal = {workspace = true}

[dev-dependencies]
env_logger = {version = "0.11"}
tokio = {workspace = true, features = ["full"]}
