[package]
description = "Javascript runtime for Moyu based on QuickJS."
edition = "2024"
license = "MPL-2.0"
name = "moyu_runtime"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.8.0"

[dependencies]
anyhow = {workspace = true}
log = {workspace = true}
quickjs-rusty = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true, features = ["time", "sync"]}

moyu_pal = {workspace = true}

[dev-dependencies]
env_logger = {version = "0.11"}
tokio = {workspace = true, features = ["full"]}
