[package]
description = "Javascript runtime for Moyu based on QuickJS."
edition = "2024"
license = "MPL-2.0"
name = "moyu_runtime"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.8.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = {workspace = true}
ehttp = { version = "0.6", features = ["native-async"] }
futures-util = "0.3"
log = {workspace = true}
quickjs-rusty = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true, features = ["time", "sync"]}
tokio-tungstenite = "0.28"

moyu_pal = {workspace = true}

[dev-dependencies]
env_logger = {version = "0.11"}
tokio = {workspace = true, features = ["full"]}
