[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Scenario plugin for Moyu."
edition = "2021"
license = "MPL-2.0"
name = "moyu_scenario"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.moyu_pal]
path = "../platform"
version = "0.7"

[dependencies.moyu_core]
default-features = false
features = ["js_runtime"]
path = "../core"
version = "0.7"
