[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Scenario plugin for Moyu."
edition = "2021"
license = "MPL-2.0"
name = "moyu_scenario"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[dependencies]
sixu = {version = "0.1", features = ["serde"]}
zip = {version = "5.1", default-features = false, features = ["zstd"]}

anyhow = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

moyu_macros = {workspace = true}

[dependencies.moyu_pal]
path = "../platform"
version = "0.7"

[dependencies.moyu_core]
default-features = false
features = ["js_runtime"]
path = "../core"
version = "0.7"
