[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Scenario plugin for Moyu."
edition = "2024"
license = "MPL-2.0"
name = "moyu_scenario"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.8.0"

[dependencies]
anyhow = {workspace = true}
base64 = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sixu = {workspace = true}
zip = {workspace = true}

moyu_core = {workspace = true, features = ["js_runtime"]}
moyu_macros = {workspace = true}
moyu_pal = {workspace = true}
